# SomeIPC

./: .gitignore  CMakeLists.txt  Makefile  pipe_ls_wc.c  pipe_sync.c
fifos/: CMakeLists.txt  fifos_utils.h  simple_fifos_client.c  simple_fifos_server.c  unique_fifos_client.c  unique_fifos_server.c
sockets/: CMakeLists.txt  sockets_client.c  sockets_server.c  sockets_utils.h
task4/: CMakeLists.txt  client.c  fifo_utils.h  server.c
